@@ -30,6 +30,7 @@ if ($_SERVER['REQUEST_METHOD'] == 'POST') {
     //$res = sql_query("DELETE FROM users WHERE id=" . sqlesc($userid)) or sqlerr(__FILE__, __LINE__);
     if (mysqli_affected_rows($GLOBALS['___mysqli_ston']) !== false) {
         $cache->delete('user' . $userid);
+        $cache->delete('all_users_');
         write_log("User: $username Was deleted by {$CURUSER['username']}");
         stderr("{$lang['stderr_success']}", "{$lang['text_success']}");
     } else {
