@@ -1,5 +1,6 @@
 9 Dec 2017
 fix: pm search delete
+add: cache all_users search for send message
 
 8 Dec 2017
 change: most buttons smaller
